--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "chitanda-md",
+  "name": "openai-botwa",
   "version": "1.0.0",
-  "description": "Simple Chatbot OpenAI by Irfan Hariyanto",
+  "description": "Simple Chatbot OpenAI by BrunoSobrino",
   "main": "index.js",
   "directories": {
     "lib": "lib"
@@ -10,10 +10,11 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js"
   },
-  "author": "irfanhariyanto",
+  "author": "BrunoSobrino",
   "license": "MIT",
   "dependencies": {
-    "@adiwajshing/baileys": "^5.0.0",
+    "@adiwajshing/baileys": "github:WhiskeySockets/Baileys",
+    "@adiwajshing/keyed-db": "^0.2.4",
     "axios": "^0.24.0",
     "chalk": "^4.1.2",
     "cheerio": "^1.0.0-rc.10",
@@ -37,7 +38,7 @@
     "qrcode-terminal": "^0.12.0",
     "util": "^0.12.4",
     "yargs": "^17.3.1",
-    "ytdl-core": "^4.11.2",
+    "ytdl-core": "github:BrunoSobrino/node-ytdl-core",
     "yt-search": "^2.10.2"
   }
 }
